--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^2.0.0",
+    "node-sass": "^7.0.1",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "dexie": "^3.2.1",
+    "sass-embedded": "^1.49.11",
     "sirv-cli": "^2.0.0",
     "svelte-icons": "^2.1.0"
   }
