--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
       "baseUrl": ".",
       "paths": {
         "@styles/*": ["styles/*.scss"],
+        "@components/*": ["src/components/*.svelte"],
+        "@pages/*": ["src/pages/*.svelte"],
       },
   },
 
